# gemini-web-api-wrapper

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  ROUTES.md  SKILL.md  gemini-web.service  install.sh  pyproject.toml
app/: auth.py  cli.py  config.py  database.py  dependencies.py  main.py  serializers.py  session_manager.py
app/routers/: chat.py  files.py  gems.py  models.py  research.py  status.py
tests/: conftest.py  diag_direct.py  test_auth.py  test_chat.py  test_database.py  test_errors.py  test_files.py  test_gems.py  test_integration.py  test_models.py  test_research.py  test_status.py
