[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-web-api-wrapper"
version = "0.1.0"
description = "REST API wrapper around Google Gemini Web — installable as a CLI application"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["gemini", "google", "api", "wrapper", "rest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/gemini-web-api-wrapper"
Repository = "https://github.com/YOUR_USERNAME/gemini-web-api-wrapper"
Issues = "https://github.com/YOUR_USERNAME/gemini-web-api-wrapper/issues"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]",
    "gemini-webapi @ git+https://github.com/HanaokaYuzu/Gemini-API.git",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.0",
    "python-multipart",
    "click>=8.0",
    "loguru",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[project.scripts]
gemini-web = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
